--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -98,6 +98,50 @@
     font-family: "Gill Sans Condensed";
 }
 
+.card-art {
+    position: absolute;
+    top: 49px;
+    left: 28px;
+    width: 302px;
+    height: 188px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Ensures the image stays within the container */
+
+    
+}
+
+.card-art > #shadow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 4px 1px rgb(0,0,0, 0.4);
+    pointer-events: none;
+}
+
+.card-art > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-art > .art-image {
+    width: 100%;
+    height: 100%;
+    /* object-fit: cover; */
+    background-size: cover;
+}
+
+.card-art > #no-art {
+    width: 100%;
+    height: 100%;
+    background-color: pink;
+    color: darkblue;
+    display: block;
+}
+
 .card-body {
     position: absolute;
     top: 52%;
