--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -54,7 +54,14 @@
 
     position: relative;
 
-    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+    transform-style: preserve-3d;
+        /* rotateX(20deg) */
+        /* rotateY(-20deg) */
+    transition: transform 0.2s ease-out;
+}
+
+.card:hover {
+    transition: transform 0.5s ease-out;
 }
 
 .card-header {
