--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,33 +1,3 @@
-@font-face {
-    font-family: "Gill Sans Condensed";
-    src: url("../assets/fonts/GillSans Condensed.otf") format("opentype");
-    font-weight: normal;
-}
-@font-face {
-    font-family: "Gill Sans Condensed";
-    src: url("../assets/fonts/GillSans Condensed Bold.otf") format("opentype");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: "Gill Sans";
-    src: url("../assets/fonts/Gill Sans.otf") format("opentype");
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: "Gill Sans";
-    src: url("../assets/fonts/Gill Sans Italic.otf") format("opentype");
-    font-weight: normal;
-    font-style: italic;
-}
-@font-face {
-    font-family: "Gill Sans";
-    src: url("../assets/fonts/Gill Sans Bold.otf") format("opentype");
-    font-weight: bold;
-    font-style: normal;
-}
-
 
 @font-face {
     font-family: "Futura Book";
@@ -45,24 +15,41 @@
     src: url("../assets/fonts/Futura Bold.ttf") format("truetype");
 }
 
+@font-face {
+    font-family: "Futura Heavy";
+    src: url("../assets/fonts/FuturaStd-Heavy.otf") format("opentype");
+}
+
+
+
 .card {
+    --text-color-black: #211c21;
+    --text-color-white: #ffffff;
+
 
     aspect-ratio: 734 / 1024;
     /* height: 50vh; */
-    height: 500px;
+    height: 1024px;
     padding: 0;
 
-    position: relative;
+    position: absolute;
 
     transform-style: preserve-3d;
         /* rotateX(20deg) */
         /* rotateY(-20deg) */
-    transition: transform 0.2s ease-out;
+    transition: transform 0.2s ease-out, transform 0.2s ease-out, transform 0.01 linear;
+    /* transition-timing-function: ease-out; */
+    transition-property: rotateY, rotateX, scale;
+    /* transition-duration: 0.2; */
+
+    color: var(--text-color-black);
 }
 
-.card:hover {
-    transition: transform 0.5s ease-out;
-}
+/* .card:hover {
+    transition: transform 0.4s ease-out;
+    transition-property: rotateY rotateX;
+    transition-duration: 0.5;
+} */
 
 .card-header {
     margin: 0;
@@ -74,12 +61,14 @@
 
 .card-name {
     position: absolute;
-    top: 3.5%;
+    top: 3.3%;
     left: 19%;
 
     font-weight: bold;
+    font-style: normal;
+    font-family: "Gill Sans";
     /* font-size: 1em; Relative to the .card font size */
-    font-size: 20px;
+    font-size: 45px;
 }
 
 .card-hp {
@@ -92,25 +81,28 @@
     flex-direction: row;
 
     text-align: left;
-    font-weight: bold;
-    font-family: "Gill Sans";
-    font-size: 30px;
+    font-family: "Futura BT Bold";
+    font-size: 60px;
+    font-kerning: normal;
+    letter-spacing: -4px;
 }
 
 .card-hp-hp {
-    margin-bottom: 5px;
+    margin-bottom: 8px;
     margin-top: auto;
 
-    font-size: 10px;
     font-family: "Gill Sans Condensed";
+    font-weight: bold;
+    font-size: 20px;
+    letter-spacing: normal;
 }
 
 .card-art {
     position: absolute;
-    top: 49px;
-    left: 28px;
-    width: 302px;
-    height: 188px;
+    top: 100px;
+    left: 58px;
+    width: 617px;
+    height: 384px;
 
     display: flex;
     justify-content: center;
@@ -167,29 +159,31 @@
 
 .attack-container {
     /* margin: 6% 0%; */
-    --text-size-header: 19px;
-    --text-size-desc: 12px;
+    --text-size-header: 40px;
+    --text-size-desc: 27px;
 
     margin-right: 8%;
-    margin-left: 8%;
+    margin-left: 7%;
 }
 
 .attack-header {
     position: relative;
     display:flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .attack-cost {
-    min-width: 29%;
+    min-width: 28%;
     text-align: left;
-
+    margin-right: 8px;
 }
 
 .attack-name {
     text-align: left;
     font-weight: bold;
     font-size: var(--text-size-header);
+    /* font-family: "Gill Sans Condensed"; */
     font-family: "Gill Sans Condensed";
 }
 
@@ -201,7 +195,8 @@
     text-align: left;
     font-weight: bold;
     font-size: var(--text-size-header);
-    font-family: "Gill Sans";
+    /* font-family: "Humanist 522"; */
+    font-family: "Futura BT";
 }
 
 .attack-desc {
@@ -210,6 +205,7 @@
     text-align: justify;
     font-size: var(--text-size-desc);
     font-family: "Gill Sans";
+    word-spacing: -3px;
 }
 
 .attack-desc p {
