--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
 .form-container {
   left: 0;
   width: 50%;
+
+  border-color: gold;
+  border-width: 4px;
+  border-style: solid;
 }
 
 .card-container {
@@ -27,9 +31,3 @@
   align-items: center;
 }
 
-.btn-export {
-  /* height: 10%; */
-  width: 200px;
-  position: absolute;
-  bottom: 20%;
-}
