--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -3,6 +3,58 @@
     flex-direction: column;
 }
 
+
+
+.collapsible-button {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+.collapsible-button:hover {
+    background-color: #ccc;
+}
+
+.collapsible-contents {
+    max-height: 0;
+    overflow: hidden;
+    background-color: #f1f1f1;
+
+    transition: max-height 0.4s ease-in-out;
+}
+
+
+
+.form-art {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+
+
 .form-attack {
-    margin-bottom: 20px;
+    margin: 10px;
+}
+
+.form-attack-body {
+    display: flex;
+}
+
+.attack-input-cost {
+    max-width: 64px;
+}
+
+.attack-input-damage {
+    max-width: 32px;
+}
+
+.attack-area-desc {
+    flex-grow: 1;
 }
