--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -37,9 +37,10 @@
     transform-style: preserve-3d;
         /* rotateX(20deg) */
         /* rotateY(-20deg) */
-    transition: transform 0.2s ease-out, transform 0.2s ease-out, transform 0.01 linear;
+    /* transition: transform 0.2s ease-out; */
+    /* transition-property: transform; */
     /* transition-timing-function: ease-out; */
-    transition-property: rotateY, rotateX, scale;
+    /* transition-property: rotateY, rotateX; */
     /* transition-duration: 0.2; */
 
     color: var(--text-color-black);
@@ -50,6 +51,15 @@
     transition-property: rotateY rotateX;
     transition-duration: 0.5;
 } */
+
+.card-img-blank {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+}
 
 .card-header {
     margin: 0;
@@ -69,6 +79,18 @@
     font-family: "Gill Sans";
     /* font-size: 1em; Relative to the .card font size */
     font-size: 45px;
+}
+
+.card-evoname {
+    position: absolute;
+    top: 9.15%;
+    left: 19.5%;
+
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Gill Sans";
+    /* font-size: 1em; Relative to the .card font size */
+    font-size: 18px;
 }
 
 .card-hp {
@@ -109,27 +131,26 @@
     align-items: center;
     overflow: hidden; /* Ensures the image stays within the container */
 
-    
+    z-index: -1;
 }
 
 .card-art > #shadow {
     position: absolute;
     width: 100%;
     height: 100%;
-    box-shadow: inset 0 0 4px 1px rgb(0,0,0, 0.4);
+    box-shadow: inset 0 0 4px 3px rgb(0,0,0, 0.4);
     pointer-events: none;
 }
 
-.card-art > img {
+/* .card-art > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
 .card-art > .art-image {
     width: 100%;
     height: 100%;
-    /* object-fit: cover; */
     background-size: cover;
 }
 
