--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -103,7 +103,8 @@
     flex-direction: row;
 
     text-align: left;
-    font-family: "Futura BT Bold";
+    font-family: "Futura BT";
+    font-weight: bold;
     font-size: 60px;
     font-kerning: normal;
     letter-spacing: -4px;
@@ -231,4 +232,61 @@
 
 .attack-desc p {
     margin: 0;
+}
+
+
+
+.card-prefooter {
+    position: absolute;
+    top: 870px;
+
+    width: 100%;
+    height: 40px;
+    /* border-style: solid; */
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    font-family: "Futura BT";
+    font-size: 28px;
+    font-weight: 900;
+}
+
+.card-prefooter-text {
+    margin-left: 4px;
+}
+
+.card-weakness {
+    position: absolute;
+    top: 8px;
+    left: 114px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+}
+
+.card-resistance {
+    position: absolute;
+    top: 8px;
+    left: 306px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+}
+
+.card-retreat {
+    position: absolute;
+    top: 11px;
+    left: 526px;
+
+    display: flex;
+    /* flex-direction: row; */
+    align-items: center;
 }
