--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -23,8 +23,8 @@
 
 
 .card {
-    --text-color-black: #211c21;
-    --text-color-white: #ffffff;
+    --text-color-black: #1f1f1fee;
+    --text-color-white: #ffffffdd;
 
 
     aspect-ratio: 734 / 1024;
@@ -79,6 +79,23 @@
     font-family: "Gill Sans";
     /* font-size: 1em; Relative to the .card font size */
     font-size: 45px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+
+    
+}
+
+.card-name-subname {
+    font-weight: bold;
+    font-style: normal;
+    font-family: "Gill Sans Condensed";
+    font-size: 25px;
+
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-bottom: 6px;
 }
 
 .card-evoname {
@@ -96,7 +113,7 @@
 
 .card-hp {
     position: absolute;
-    top: 2.5%;
+    top: 2.8%;
     left: 87%;
     translate: -100%;
 
@@ -106,7 +123,7 @@
     text-align: left;
     font-family: "Futura BT";
     font-weight: bold;
-    font-size: 60px;
+    font-size: 56px;
     font-kerning: normal;
     letter-spacing: -4px;
 }
@@ -300,4 +317,132 @@
     display: flex;
     /* flex-direction: row; */
     align-items: center;
+}
+
+.card-footer {
+    position: absolute;
+    top: 915px;
+
+    width: 100%;
+    height: 80px;
+    /* border-style: solid; */
+
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+}
+
+.card-dex-description {
+    position: absolute;
+    right: 44px;
+    top: 8px;
+
+    width: 450px;
+    height: 68px;
+
+    /* border-style: solid; */
+    /* background: #0002; */
+    /* margin-right: 20px; */
+
+
+    font-family: "Gill Sans";
+    font-size: 19px;
+
+    white-space: pre-wrap;
+    word-wrap: break-word; /* Ensure long words break properly */
+
+    text-align: right;
+    /* vertical-align: middle; */
+    display: flex;
+    align-items: center; /* Vertical alignment */
+    justify-content: end; /* Optional: Horizontal alignment */
+    opacity: 90%;
+}
+
+.card-footer-artist {
+    position: absolute;
+    left: 44px;
+    top: 21px;
+
+    font-family: "Gill Sans";
+    font-style: italic;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.card-footer-collectornum {
+    position: absolute;
+    left: 96px;
+    top: 53px;
+
+    overflow: hidden;
+    width: 100px;
+    text-align: right;
+
+    font-family: "Gill Sans";
+    font-style: italic;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.card-footer-reg {
+    position: absolute;
+    left: 45px;
+    top: 46px;
+
+    overflow: hidden;
+    width: 15px;
+    height: 22px;
+
+    background: white;
+
+    border-style: solid;
+    border-radius: 4px;
+    border-color: black;
+    border-width: 2px;
+
+    font-family: 'Gill Sans Condensed';
+    font-size: 20px;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+.card-footer-set {
+    position: absolute;
+    left: 68px;
+    top: 45px;
+
+    overflow: hidden;
+    width: 48px;
+    height: 26px;
+    display: flex;
+
+    background: black;
+
+    border-radius: 5px;
+}
+
+.card-footer-set-inner {
+    
+    margin: 1px;
+    width: auto;
+    height: auto;
+    flex: 1;
+    
+
+    background: var(--text-color-black);
+
+    border-style: solid;
+    border-radius: 3px;
+    border-color: white;
+    border-width: 2px;
+
+    font-family: 'Gill Sans Condensed';
+    font-size: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center
 }
