--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,32 @@
   flex-direction: row;
 }
 
+#background {
+  position: fixed;
+  width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%;
+  z-index: -100;
+  background: url("./assets/backgrounds/bg_energy_icons_color.png") 0 0 repeat;
+  background-size: 256px;
+  transform: rotate(30deg);
+  background-color: #fffae8;
+}
+
 .form-container {
   left: 0;
   width: 50%;
 
-  border-color: gold;
-  border-width: 4px;
-  border-style: solid;
+  /* border-color: gold; */
+  /* border-width: 4px; */
+  /* border-style: solid; */
+
+  
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 32px;
+  padding: 16px;
+  backdrop-filter: blur(3px);
 }
 
 .card-container {
