--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -3,6 +3,10 @@
     flex-direction: column;
 }
 
+.shadowed {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
 fieldset {
     display: flex;
     flex-direction: column;
@@ -15,19 +19,41 @@ label {
     text-align: left;
 }
 
+input, select, textarea {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0.8rem;
+    border: 2px solid #ede0d4;
+    border-radius: 8px;
+    font-size: 1rem;
+    transition: all 0.3s ease;
+    background: rgba(255, 255, 255, 0.8);
+}
 
+.collapsible-body {
+    border-radius: 16px;
+    margin-bottom: 16px;
+
+    transition: box-shadow 0.3s;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+}
+
+.collapsible-body:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
 
 .collapsible-button {
     background-color: #eee;
     color: #444;
     cursor: pointer;
     padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
 
+    text-align: left;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: background-color 0.3s;
 }
 
 .collapsible-button:hover {
@@ -35,13 +61,30 @@ label {
 }
 
 .collapsible-contents {
-    max-height: 0;
-    overflow: hidden;
     background-color: #f1f1f1;
-
-    transition: max-height 0.4s ease-in-out;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
+.collapsible-body.active .collapsible-contents {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+
+
+
+
+.form-group {
+    /* border-width: 2px; */
+    /* border-style: solid; */
+
+    /* padding: 16px; */
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
 
 
 .form-art {
