--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -36,6 +36,37 @@ input, select, textarea {
     background: rgba(255, 255, 255, 0.8);
 }
 
+
+
+button {
+    background: #ff99cc; /* Soft pink */
+    color: white;
+    font-family: 'Gill Sans';;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.1s ease;
+    box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
+    margin: 8px;
+}
+
+button:hover {
+    background: #ff77aa; /* Slightly darker pink */
+    transform: translateY(-2px);
+    box-shadow: 3px 6px 8px rgba(0, 0, 0, 0.25);
+}
+
+button:active {
+    background: #ff5599;
+    transform: translateY(1px);
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+
+
 .collapsible-body {
     border-radius: 16px;
     margin-bottom: 16px;
