--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 
 .app-container {
   height: 100vh;
-  display:flex;
-  flex-direction: row;
+  /* display:flex; */
+  /* flex-direction: row; */
 }
 
 #background {
@@ -37,11 +37,15 @@
   border-radius: 32px;
   padding: 16px;
   backdrop-filter: blur(3px);
+
+  font-family: 'Gill Sans';
 }
 
+/* TODO: align this */
 .card-container {
-  position: fixed;
+  position: absolute;
   right: 0;
+  top: 10%;
   width: 50%;
   height: 100vh;
   display: flex;
@@ -52,3 +56,68 @@
   /* z-index: -1; */
 }
 
+
+
+
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: calc(100% - 64px);
+  background: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(5px);
+  text-align: center;
+  padding: 10px 32px;
+
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  font-family: 'Gill Sans';
+  font-size: 16px;
+}
+
+.footer a {
+  color: #0073e6;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 0 8px;
+}
+
+.footer a:hover {
+  color: #ff77aa;
+}
+
+
+
+
+
+
+button {
+  background: #ff99cc; /* Soft pink */
+  color: white;
+  font-family: 'Gill Sans';
+  font-size: 16px;
+  font-weight: bold;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.1s ease;
+  box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
+  margin: 8px;
+}
+
+button:hover {
+  background: #ff77aa; /* Slightly darker pink */
+  transform: translateY(-2px);
+  box-shadow: 3px 6px 8px rgba(0, 0, 0, 0.25);
+}
+
+button:active {
+  background: #ff5599;
+  transform: translateY(1px);
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
+}
